go/p2panda_ffi/p2panda_ffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_p2panda_ffi_fn_constructor_nodebuilder_new(RustCallStatus *out_status
    
);
void uniffi_p2panda_ffi_fn_method_nodebuilder_ack_policy(uint64_t ptr, RustBuffer ack_policy, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_nodebuilder_bind_ip_v4(uint64_t ptr, RustBuffer ip_address, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_nodebuilder_bind_ip_v6(uint64_t ptr, RustBuffer ip_address, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_nodebuilder_bind_port_v4(uint64_t ptr, uint16_t port, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_nodebuilder_bind_port_v6(uint64_t ptr, uint16_t port, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_nodebuilder_bootstrap(uint64_t ptr, uint64_t node_id, uint64_t relay_url, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_nodebuilder_database_url(uint64_t ptr, RustBuffer url, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_nodebuilder_mdns_mode(uint64_t ptr, RustBuffer mode, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_nodebuilder_network_id(uint64_t ptr, uint64_t network_id, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_nodebuilder_private_key(uint64_t ptr, uint64_t private_key, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_nodebuilder_relay_url(uint64_t ptr, uint64_t url, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_nodebuilder_spawn(uint64_t ptr
);
uint64_t uniffi_p2panda_ffi_fn_method_header_hash(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_header_log_id(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_header_payload_hash(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_header_payload_size(uint64_t ptr, RustCallStatus *out_status
);
int8_t uniffi_p2panda_ffi_fn_method_header_prune_flag(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_header_public_key(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_header_seq_num(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_header_signature(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_header_timestamp(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_header_version(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_networkid_from_bytes(RustBuffer value, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_networkid_from_hash(uint64_t hash, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_networkid_from_hex(RustBuffer value, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_networkid_random(RustCallStatus *out_status
    
);
RustBuffer uniffi_p2panda_ffi_fn_method_networkid_to_bytes(uint64_t ptr, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_networkid_to_hex(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_privatekey_from_bytes(RustBuffer value, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_privatekey_from_hex(RustBuffer value, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_privatekey_generate(RustCallStatus *out_status
    
);
uint64_t uniffi_p2panda_ffi_fn_method_privatekey_public_key(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_privatekey_sign(uint64_t ptr, RustBuffer bytes, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_privatekey_to_bytes(uint64_t ptr, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_privatekey_to_hex(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_publickey_from_bytes(RustBuffer value, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_publickey_from_hex(RustBuffer value, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_publickey_to_bytes(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_node_spawn(void
    
);
uint64_t uniffi_p2panda_ffi_fn_method_node_ephemeral_stream(uint64_t ptr, uint64_t topic, uint64_t on_message
);
uint64_t uniffi_p2panda_ffi_fn_method_node_id(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_node_insert_bootstrap(uint64_t ptr, uint64_t node_id, uint64_t relay_url
);
uint64_t uniffi_p2panda_ffi_fn_method_node_network_id(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_node_stream(uint64_t ptr, uint64_t topic, uint64_t callback
);
uint64_t uniffi_p2panda_ffi_fn_method_node_stream_from(uint64_t ptr, uint64_t topic, RustBuffer from, uint64_t callback
);
uint64_t uniffi_p2panda_ffi_fn_method_processedoperation_ack(uint64_t ptr
);
uint64_t uniffi_p2panda_ffi_fn_method_processedoperation_author(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_processedoperation_id(uint64_t ptr, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_processedoperation_message(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_processedoperation_processed(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_processedoperation_timestamp(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_processedoperation_topic(uint64_t ptr, RustCallStatus *out_status
);