python/p2panda_ffi/p2panda_ffi.py

    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_hash.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_log_id.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_log_id.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_payload_hash.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_payload_hash.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_payload_size.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_payload_size.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_prune_flag.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_prune_flag.restype = ctypes.c_int8
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_public_key.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_public_key.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_seq_num.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_seq_num.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_signature.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_signature.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_timestamp.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_timestamp.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_version.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_version.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_networkid_from_bytes.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_networkid_from_bytes.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_networkid_from_hash.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_networkid_from_hash.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_networkid_from_hex.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_networkid_from_hex.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_networkid_random.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_networkid_random.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_networkid_to_bytes.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_networkid_to_bytes.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_networkid_to_hex.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_networkid_to_hex.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_node_spawn.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_node_spawn.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_ephemeral_stream.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_uint64,
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_ephemeral_stream.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_id.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_id.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_insert_bootstrap.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_uint64,
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_insert_bootstrap.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_network_id.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_network_id.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_stream.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_uint64,
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_stream.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_stream_from.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_uint64,
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_node_stream_from.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_nodebuilder_new.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_nodebuilder_new.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_ack_policy.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_ack_policy.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_bind_ip_v4.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_bind_ip_v4.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_bind_ip_v6.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_bind_ip_v6.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_bind_port_v4.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint16,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_bind_port_v4.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_bind_port_v6.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint16,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_bind_port_v6.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_bootstrap.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_bootstrap.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_database_url.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_database_url.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_mdns_mode.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_mdns_mode.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_network_id.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_network_id.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_private_key.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_private_key.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_relay_url.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_relay_url.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_spawn.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_nodebuilder_spawn.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_privatekey_from_bytes.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_privatekey_from_bytes.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_privatekey_from_hex.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_privatekey_from_hex.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_privatekey_generate.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_privatekey_generate.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_privatekey_public_key.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_privatekey_public_key.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_privatekey_sign.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_privatekey_sign.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_privatekey_to_bytes.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_privatekey_to_bytes.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_privatekey_to_hex.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_privatekey_to_hex.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_ack.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_ack.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_author.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_author.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_id.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_id.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_message.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_message.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_processed.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_processed.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_timestamp.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_timestamp.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_topic.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_processedoperation_topic.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_publickey_from_bytes.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_publickey_from_bytes.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_publickey_from_hex.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_publickey_from_hex.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_publickey_to_bytes.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_publickey_to_bytes.restype = _UniffiRustBuffer
